--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -2,7 +2,7 @@ name: Daily Extension Commit
 
 on:
   schedule:
-    - cron: '0 10 * * *'  # Every day at 10 AM UTC
+    - cron: '0 10 * * *'  # Runs daily at 10 AM UTC
   workflow_dispatch:
 
 jobs:
@@ -17,7 +17,7 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Run Python script
+      - name: Run Python Script
         run: |
           pip install requests
           python generate_extension_entry.py
@@ -32,4 +32,3 @@ jobs:
           git add extensions/
           git commit -m "Daily Extension Commit - $(date +'%Y-%m-%d')" || echo "Nothing to commit"
           git push origin main
-
