--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -23,12 +23,10 @@ jobs:
           python generate_extension_entry.py
 
       - name: Commit and Push
-        env:
-          GH_TOKEN: ${{ secrets.GH_PAT }}
         run: |
           git config user.name "AI Extension Bot"
           git config user.email "bot@example.com"
-          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}
+          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
           git add extensions/
           git commit -m "Daily Extension Commit - $(date +'%Y-%m-%d')" || echo "Nothing to commit"
           git push origin main
