Automation testing for readme.md file

--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -24,6 +24,10 @@ jobs:
           pip install requests
           python generate_extension_entry.py
 
+      - name: Update README with Extensions
+        run: |
+          python update_readme.py
+
       - name: Show remote URL
         run: git config --get remote.origin.url
 
