--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Update README with Extensions
         run: |
-          python /update_readme.py
+          python update_readme.py
 
       - name: Show remote URL
         run: git config --get remote.origin.url
