--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -31,11 +31,11 @@ jobs:
       - name: Show remote URL
         run: git config --get remote.origin.url
 
-      - name: Commit and Push
-        run: |
-          git config user.name "AI Extension Bot"
-          git config user.email "bot@example.com"
-          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
-          git add extensions/
-          git commit -m "Daily Extension Commit - $(date +'%Y-%m-%d')" || echo "Nothing to commit"
-          git push origin main
+      # - name: Commit and Push
+      #   run: |
+      #     git config user.name "AI Extension Bot"
+      #     git config user.email "bot@example.com"
+      #     git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
+      #     git add extensions/
+      #     git commit -m "Daily Extension Commit - $(date +'%Y-%m-%d')" || echo "Nothing to commit"
+      #     git push origin main
